Mejoras de estilo y CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ permissions:
   contents: write
 
 env:
-  RUST_BINARY_NAME: DndGroupMusic
+  RUST_BINARY_NAME: DnDGroupMusic
 
 jobs:
   build-windows:
